# ortflix-costume

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: lint.yml  security.yml
kometa/: _version.py
kometa/asset_helpers/: check_plex_titles.py
kometa/asset_helpers/Organize_Downloads/: .gitignore  Makefile  README.md  dockerfile  exception_mappings.json  handlers.py  organize_assets.py  poster_handler.py  pyproject.toml
kometa/config/: Holiday.yml  IMDBGenres.yml  People.yml  animation.yml  collections.yml  config.yml  disney.yml  franchises.yml  israeli_holidays.yml  musicals.yml  shows.yml  stats.yml  tv_status_ribbons.yml
kometa/tools/: check_plex_titles.py  update_jewish_dates.py
kometa/tools/asset-organizer/: __init__.py  exception_mappings.json  handlers.py  organize_assets.py  overlay_handler.py  poster_handler.py  posters.txt  pyproject.toml  pytest.ini  tmdb_cache.json  tmdb_resolver.py
kometa/tools/asset-organizer/tests/: handlers_test.py  poster_handler_test.py
logs/: Films_report.yml  Musicals_report.yml  TV Programmes_report.yml  films-librery.txt  films.txt  posters.txt
radarr/: README.md  fix_audio_lang.py  migrate_hdr_movies.py  radarr_utils.py  route_hdr_on_import.py  tag_overseerr_requester.py
scripts/: check_plex_titles.py  generate_kometa_env.sh  sync_to_host.sh  update_jewish_dates.py
tautulli/: README.md  tag_radarr_recently_added.py
tautulli/scripts/: tag_radarr_recently_added.py  tag_radarr_watched.py  tautulli_utils.py
(+2 files in other folders)
